# colord-test

./: README.md  meson.build
data/: com.github.alizame.colord-test.appdata.xml.in  com.github.alizame.colord-test.desktop.in.in
lib/: meson.build
lib/ColorManager/: ColorManager.vala  ColorManagerFacade.vala  Device.vala  Profile.vala
lib/ColorManager/ColorManagerDbus/: ColorManagerDbus.vala
src/: Application.vala  ColorManager.vala
src/ColorManagerLib/ColorManagerDbusAPI/: ColorManager.Device.vala  ColorManager.Device.xml  ColorManager.Profile.vala  ColorManager.Profile.xml  ColorManager.xml
test/: DBus_initialisation.vala  UnitTest.vala  meson.build
