
dependencies = [
    dependency('gio-unix-2.0', version: '>=2.20'),
]

test('colord-test UnitTest',
    executable(
        'UnitTest',
        'UnitTest.vala',
        dependencies: dependencies
    )
)

test('colord-test DBus_initialisation',
    executable(
        'DBus_initialisation',
        'DBus_initialisation.vala',
        dependencies: dependencies
    )
)
